# TRMbeta

./: README.md  __init__.py  funcs.py  pyproject.toml
example/: plot_fixation.py  run_fixation.py
example/data/: circle_DBB_fixation_h_game=CPD_M=5_Q=2_w=0.4_V=1.0_C=1.0_omega=None_L=None.txt  circle_DBB_fixation_h_game=CPD_M=5_Q=2_w=0.4_V=10.0_C=1.0_omega=None_L=None.txt  circle_DBB_fixation_h_game=CPD_M=5_Q=2_w=0.4_V=2.0_C=1.0_omega=None_L=None.txt  circle_DBB_fixation_h_game=CPD_M=5_Q=2_w=0.4_V=5.0_C=1.0_omega=None_L=None.txt
src/TRMbeta/: __init__.py  population.py
