[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TRMbeta"
version = "0.2"
dependencies = ["numpy",
"scipy",
"twine"]
requires-python = ">=3.7"
authors = [
  {name = "Diogo L Pires", email = "diogo.l.pires@gmail.com"},
]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]